<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">捐血活動快查</string>
    <string name="app_intro">本程式可快速查詢最近的捐血活動，以及台灣各血液中心目前的庫存狀態。資料來源為[醫療財團法人台灣血液基金會]，需要網路連線來抓取最新資料，以便提供最即時資訊。</string>
    <!--<string name="hello_world">Hello world!</string>-->
    <string name="action_settings">設定</string>
    <string name="action_go_to_personal">捐血者網路查詢</string>
    <string name="action_go_to_personal_summary">由台灣血液基金會提供</string>

    <!-- MainActivity -->
    <string name="pattern_separator">：</string>
    <string name="title_activity_main">主程式</string>
    <string name="title_section1">庫存</string>
    <string name="title_section2">活動</string>
    <string name="title_section3">捐血點</string>

    <!-- StorageFragment -->
    <string-array name="blood_storage_status">
        <item>庫存量0</item>
        <item>庫存量4日以下</item>
        <item>庫存量4~7日</item>
        <item>庫存量7日以上</item>
    </string-array>
    <string-array name="blood_type">
        <item>A型</item>
        <item>B型</item>
        <item>O型</item>
        <item>AB型</item>
    </string-array>

    <string name="choose_near_by_blood_center">請選擇一個您附近的捐血中心，讓我們幫你顯示那附近的捐血活動</string>

    <!-- NavigationDrawerFragment -->
    <string-array name="blood_center">
        <item>台灣血液基金會</item>
        <item>台北捐血中心</item>
        <item>新竹捐血中心</item>
        <item>台中捐血中心</item>
        <!--<item>台南捐血中心</item>-->
        <item>高雄捐血中心</item>
        <!--<item>花蓮捐血中心</item>-->
    </string-array>
    <string-array name="blood_center_donate_station_city">
        <item>台灣</item>
        <item>台北市、新北市、基隆市、宜蘭縣、花蓮縣</item>
        <item>桃園市、新竹縣市、苗栗縣</item>
        <item>台中市、彰化縣、雲林縣、南投縣</item>
        <!--<item>台南市、嘉義縣市</item>-->
        <item>高雄市、台南市、嘉義縣市、屏東縣、澎湖縣、台東縣</item>
        <!--<item>花蓮捐血中心</item>-->
    </string-array>

    <string name="title_downloading_data">查詢中</string>
    <string name="title_data_not_available">目前暫無資料</string>
    <string name="label_time_to">至</string>
    <string name="action_go_next_week">下一周</string>
    <string name="action_go_last_week">上一周</string>
    <string name="action_go_back_today">回到今日</string>

    <string name="title_activity_settings">設置</string>
    <string name="action_search_on_maps">你想找的是</string>
    <string name="action_more">更多功能</string>
    <string name="action_search_location">在地圖上尋找</string>
    <string name="action_add_to_calendar">加入行事曆</string>
    <string name="action_add_to_calendar_description">由捐血活動快查新增</string>
    <string name="action_more_info">更多資訊</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">一般設定</string>
    <string name="app_version">版本</string>
    <string name="app_build_info">版本資訊</string>
    <string name="app_change_log">更新紀錄</string>
    <!--<string name="title_copyright">版權</string>
    <string name="title_about_app">關於程式</string>-->
    <string name="title_open_source">開放原始碼</string>
    <!-- Open Source links are in configs.xml -->
    <string name="title_display">顯示</string>
    <string name="title_sticky_header">固定顯示標頭</string>
    <string name="title_sticky_header_in_gridview">固定顯示標頭於列表上方</string>
    <string name="title_enable_adview">顯示廣告</string>
    <string name="title_enable_adview_in_storage_list">在頁面顯示廣告救救開發者</string>
    <string name="title_new_activity2">使用新版分頁顯示</string>
    <string name="summary_use_activity1">使用舊的滑動分頁顯示</string>
    <string name="summary_use_activity2">使用新的底部分頁顯示</string>
    <string name="app_privacy_policy">隱私權政策</string>

    <string name="action_go_to_facebook">前往粉絲團</string>
    <string name="action_go_to_website">開啟行動版網頁</string>
    <string name="action_go_to_station">捐血站點</string>

    <string name="action_restart_app_now">立即使用</string>
    <string name="action_restart_app_later">稍候</string>
    <string name="title_restart_app_warning">需要重新啟動</string>
    <string name="message_restart_app">您想要現在套用這項變動嗎？</string>

    <string name="snackbar_privacy_policy_updated">隱私權政策變更</string>
    <string name="snackbar_privacy_policy_review">檢視</string>
    <string name="snackbar_privacy_policy_ignore">關閉</string>

    <string name="splash_privacy_policy_review">在本應用程式使用過程中，可能會收集一些操作資訊，以供未來程式改進使用。這些資訊不會包含您的個人資料與隱私。您可以在這裡檢視相關的隱私權政策。繼續使用本程式代表您同意本應用程式的行為。</string>
    <string name="splash_continue">繼續</string>

    <string name="section0_summary">還想看看其他地方？</string>
    <string name="section1_summary">最近的庫存狀況</string>
    <string name="section2_summary">最近的捐血活動</string>
    <string name="section3_summary">固定/巡迴 捐血點</string>
</resources>

