<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="dolphin.android.apps.BloodServiceApp.ui.MainActivity">

    <item
        android:id="@+id/action_go_to_station"
        android:title="@string/action_go_to_station"
        app:showAsAction="withText|ifRoom" />

    <item
        android:id="@+id/action_facebook"
        android:icon="@drawable/ic_action_facebook"
        android:title="@string/action_go_to_facebook"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_go_next_week"
        android:title="@string/action_go_next_week"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_go_last_week"
        android:title="@string/action_go_last_week"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_go_back_today"
        android:title="@string/action_go_back_today"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_go_to_website"
        android:title="@string/action_go_to_website"
        app:showAsAction="withText|never" />
</menu>
