<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!--<CheckBoxPreference
        android:key="example_checkbox"
        android:title="@string/pref_title_social_recommendations"
        android:summary="@string/pref_description_social_recommendations"
        android:defaultValue="true" />-->

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code.
    <EditTextPreference
        android:key="example_text"
        android:title="@string/pref_title_display_name"
        android:defaultValue="@string/pref_default_display_name"
        android:selectAllOnFocus="true"
        android:inputType="textCapWords"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLines="1" />-->

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code.
    <ListPreference
        android:key="example_list"
        android:title="@string/pref_title_add_friends_to_messages"
        android:defaultValue="-1"
        android:entries="@array/pref_example_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />-->
    <PreferenceCategory android:title="@string/app_build_info">
        <Preference
            android:key="app_version"
            android:title="@string/app_version" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/title_display">
        <CheckBoxPreference
            android:key="enable_sticky_header"
            android:title="@string/title_sticky_header"
            android:summary="@string/title_sticky_header_in_gridview"
            android:defaultValue="@bool/fragment_donation_sticky_grid_header_sticky"
            android:enabled="true" />
        <CheckBoxPreference
            android:key="enable_adview"
            android:title="@string/title_enable_adview"
            android:summary="@string/title_enable_adview_in_storage_list"
            android:defaultValue="true" />
    </PreferenceCategory>
</PreferenceScreen>
