<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffefefef"
    android:orientation="vertical"
    tools:context="dolphin.android.apps.BloodServiceApp.ui.NavigationDrawerFragment"
    tools:ignore="PrivateResource,RtlHardcoded">

    <TextView
        android:id="@android:id/title"
        style="@style/Theme.Bloody.Widget.ActionBar.Title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/material_appbar_height"
        android:background="@color/bloody_color"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/material_horizontal_margin"
        android:paddingRight="@dimen/material_horizontal_margin"
        android:text="@string/app_name" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        tools:listitem="@layout/listview_blood_center" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/ripple_material_light" />

    <TextView
        android:id="@+id/action_go_personal"
        style="@style/TextAppearance.AppCompat.Subhead"
        android:layout_width="match_parent"
        android:layout_height="@dimen/material_listview_header_height"
        android:layout_marginRight="@dimen/material_horizontal_margin"
        android:background="@drawable/abc_list_selector_holo_light"
        android:drawableRight="@drawable/ic_action_action_open_in_browser"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/material_horizontal_margin"
        android:paddingRight="@dimen/material_horizontal_margin"
        android:text="@string/action_go_to_personal" />

    <TextView
        android:id="@android:id/edit"
        style="@style/TextAppearance.AppCompat.Subhead"
        android:layout_width="match_parent"
        android:layout_height="@dimen/material_listview_header_height"
        android:background="@drawable/abc_list_selector_holo_light"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/material_horizontal_margin"
        android:paddingRight="@dimen/material_horizontal_margin"
        android:text="@string/action_settings"
        tools:ignore="PrivateResource" />

    <TextView
        android:id="@+id/action_private_policy"
        style="@style/TextAppearance.AppCompat.Subhead"
        android:layout_width="match_parent"
        android:layout_height="@dimen/material_listview_header_height"
        android:background="@drawable/abc_list_selector_holo_light"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/material_horizontal_margin"
        android:paddingRight="@dimen/material_horizontal_margin"
        android:text="@string/app_privacy_policy"
        tools:ignore="PrivateResource" />

</LinearLayout>
